Scaffolding Member, Boat, BoatType

--- a/BoatClub/BoatClub.csproj
+++ b/BoatClub/BoatClub.csproj
@@ -43,12 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\BoatType.cs" />
     <Compile Include="Controller\InputListener.cs" />
+    <Compile Include="Model\Boat.cs" />
+    <Compile Include="Model\Member.cs" />
     <Compile Include="Model\MemberRegistry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\XML.cs" />
     <Compile Include="View\CLI.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
