--- a/BoatClub/BoatClub.csproj
+++ b/BoatClub/BoatClub.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Controller\InputListener.cs" />
     <Compile Include="Model\Boat.cs" />
     <Compile Include="Model\Member.cs" />
+    <Compile Include="Model\MemberListCompactComponent.cs" />
     <Compile Include="Model\MemberRegistry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,10 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
+    <None Include="Storage\.gitkeep" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Storage\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
